--- a/blogpost.html
+++ b/blogpost.html
@@ -16,5 +16,8 @@
                 <p>Suscribete y dale like</p>
             </div>
         </div>
+    <footer>
+        Hecho con <3 por irvv
+    </footer>
     </body>
 </html>
