--- a/blogpost.html
+++ b/blogpost.html
@@ -1,23 +1,25 @@
 <html>
-    <head>
-        <title>Bienvenido a Hyperblog 2.0</title>
-        <link rel="stylesheet" href="css/estilos.css" />
-    </head>
-    <body>
-        <div id="container" class="wrapper">
-            <div id="cabecera">
-                Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
-            </div>
-            <div id="post">
-                <h1>Este es el título atractivo e interesante del post</h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
-                <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
-                <p>Suscribete y dale like</p>
-            </div>
-        </div>
+<head>
+    <title>Bienvenido a Hyperblog 2.0</title>
+    <link rel="stylesheet" href="css/estilos.css" />
+    <meta charset="utf-8">
+</head>
+<body>
+<div id="container">
+    <div id="cabecera">
+        <img id="logo" src="images/dragon.webp" />
+        Hyperblog
+        <span id="tagline">Tu blog de cabecera</span>
+    </div>
+    <div id="post">
+        <h1>Este es el título atractivo e interesante del post</h1>
+        <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+        <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+        <p>Suscribete y dale like</p>
+    </div>
     <footer>
-        Hecho con <3 por irvv
+        Hecho con amor por irvv
     </footer>
-    </body>
+</div>
+</body>
 </html>
